--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "body-parser": "^1.15.1",
     "ejs": "^2.4.1",
     "express": "~3.2.4",
-    "multer": "^1.1.0",
+    "multer": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
